reconnect button alignment issue

--- a/src/components/chatwindow/chatWindow.scss
+++ b/src/components/chatwindow/chatWindow.scss
@@ -689,7 +689,7 @@
 }
 
 .kore-chat-window .kore-chat-header .chat-box-controls .reload-btn {
-    margin-top: 0;
+    margin-top: 5px;
     background-size: 16px 16px;
     display: inline-block;
     font-size: 18px;
